# ucsc.app

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
backend/: pyproject.toml  server.py
backend/endpoints/: bigbrother.py  courses.py
backend/locations/: README.md  create.sql  locations.py  locationscraper.py  loctypes.py  pisadownloader.py  readbin.py
public/: 404.html  s.js  sitemap.xml
src/: App.css  App.tsx  vite-env.d.ts
src/common/: Icon.tsx  constants.ts  terms.ts
src/common/loading/: Loading.css  Loading.tsx
src/common/navbar/desktop/: TopBar.css  TopBar.tsx
src/common/navbar/mobile/: TopBar.css  TopBar.tsx
src/common/seo/: schema.ts  usePageMeta.tsx
src/common/theme/: ThemeChanger.css  ThemeChanger.tsx
src/components/navbar/: NavbarButtons.tsx
src/courses/: Card.tsx  CourseSearchPanel.tsx  Courses.tsx  Filters.tsx  Search.tsx  generateIcs.ts
src/courses/components/: Buttons.tsx
src/dashboard/: Dashboard.css  Dashboard.tsx
src/menu/: MenuPage.tsx  api.ts
src/menu/desktop/: DateSelector.tsx  Menu.tsx
src/menu/mobile/: Menu.tsx
src/news/: News.tsx  NewsFilter.tsx
src/schedules/: BuildingPopup.tsx  FetchRooms.ts  Map.tsx  ScheduleMapPage.tsx
src/schedules/components/: ScheduleTimeBlock.tsx
src/schedules/styles/: BuildingPopup.css  Map.css  Schedule.css
