[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.129.2",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "idna>=3.15",
    "lxml>=6.1.0",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "requests>=2.33.0",
    "tqdm>=4.67.3",
    "urllib3>=2.7.0",
    "uvicorn>=0.41.0",
]
